fix wrong color tag

--- a/lms/static/tma-static/css/catalog-course-card.css
+++ b/lms/static/tma-static/css/catalog-course-card.css
@@ -104,7 +104,7 @@
 .design {
     background-color: #629632;
 }
-.marketing {
+.communication {
     background-color: #004388;
 }
 .management {
